fix: typetester and typeset style vertical alignment (#773)
* fix: center typetester dropdown text

* fix: center typeset style sticky controls

--- a/src/components/TypeTester/_type-tester.scss
+++ b/src/components/TypeTester/_type-tester.scss
@@ -71,8 +71,6 @@
       .#{$prefix}--list-box__field {
         background: $ui-02;
         height: 3rem;
-        padding-top: $spacing-05;
-        padding-bottom: rem(15px);
         border-bottom: 1px solid $carbon--gray-20;
 
         &:hover {
