--- a/src/components/TypesetStyle/_typeset-style.scss
+++ b/src/components/TypesetStyle/_typeset-style.scss
@@ -68,7 +68,7 @@
   z-index: 2;
   box-sizing: content-box;
   position: sticky;
-  top: 112px;
+  top: 120px;
 }
 
 .#{$prefix}--typeset-style-nav-shiv {
@@ -85,7 +85,6 @@
   padding-left: $spacing-05;
   padding-right: 0;
   width: 100%;
-  margin-top: 8px;
 
   @include carbon--breakpoint('md') {
     width: 62.5%;
